# sOn

./: .env.example  .env.production  .gitignore  AUDIT-PLAN.md  AUDIT-PROD-MAX-STYLE.md  CLAUDE.md  FINAL_messenger_prompt.md  README.md  deploy.sh  docker-compose.cloudflared.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
.claude/: launch.json
androidApp/: build.gradle.kts
backend/crypto_service/: Cargo.toml  Dockerfile
backend/crypto_service/src/: keys.rs  main.rs
coturn/: turnserver.conf
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: API.md  ARCHITECTURE.md  AUDIT_2026-04-09.md  AUDIT_2026-04-10.md  AUDIT_REPORT.md  DATABASE.md  DESIGN_SPEC_MAX.md  FRONTEND.md  INFRASTRUCTURE.md  MAX_PATTERNS.md  MOBILE.md  MSTY_CLAUDE_MCP_BRIDGE.md  PLAN.md  PRODUCTION-ROADMAP.md  PRODUCTION_READINESS_AUDIT_2026-03-24.md  SECURITY.md  STAGING_PROD_RUNBOOK.md  VPS-SSH-TUNNEL-GUIDE.md
livekit/: livekit.yaml
mcp-bridge/: .env.example  Dockerfile  README.md  claude-legacy-wrapper.js  e2e-test.mjs  index.js  multi-backend-wrapper.js  package.json  smoke-test.mjs
scripts/: backup.sh  healthcheck.sh  restore-test.sh  smoke-web-server.mjs  staging-smoke.sh
server/: .env  Dockerfile  db.js  index.js  jest.config.js  logger.js  package-lock.json  package.json  sentry.js  storage.js
shared/: build.gradle.kts
webApp/: .dockerignore  AUDIT-2.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  (+1 more)
(+237 files in other folders)
