[package]
name = "son-crypto-service"
version = "0.1.0"
edition = "2021"
description = "sOn Messenger — сервис управления ключами и шифрования"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"

# Криптография
x25519-dalek = "2"
ed25519-dalek = { version = "2", features = ["serde"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
