[package]
name = "son-desktop"
version = "1.0.0"
description = "sOn Messenger — десктопное приложение"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
